0x07-python-test_driven_development/tests/0-add_integer.txt
~~~~~~~~~~~~~~~~~~~~~~~~~~
Module - ``0-add_integer``
~~~~~~~~~~~~~~~~~~~~~~~~~

Function - ``add_integer``
--------------------------

To use, import the function:
   >>> add_integer = __import__("0-add_integer").add_integer

Testing it:
	>>> add_integer(3, 3)
	6

	>>> add_integer(3, 3.0)
	6

	>>> add_integer(3)
	101

	>>> add_integer(3, -3)
	0

	>>> add_integer(4, "school")
	Traceback (most recent call last):
	TypeError: b must be an integer


	>>> add_integer(None)
	Traceback (most recent call last):
	TypeError: a must be an integer

	>>> add_integer()
	Traceback (most recent call last):
	TypeError: add_integer() missing 1 required positional argument: 'a'

	>>> add_integer("a", "b")
	Traceback (most recent call last):
	TypeError: a must be an integer

	>>> add_integer(float('nan'))
	Traceback (most recent call last):
	ValueError: cannot convert float NaN to integer

	>>> add_integer(1000e1000)
	Traceback (most recent call last):
	OverflowError: cannot convert float infinity to integer
